--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,11 +1,30 @@
+html,body{
+    height: 100%;
+    width: 100%;
+}
+
 #header{
-    background-color: rgb(88, 192, 192);
+    background-color: blue;
 }
 #menu{
     background-color: rgb(245, 106, 41);
+    float: left;
+    width: 150px;
+    height: 100%;
+    font-size: 20px;
+}
+#menu ul li{
+    list-style: none;
+}
+menu ul li a{
+    text-decoration: none;
+}
+menu ul li a:hover{
+    color: rgb(0, 0, 255);
 }
 #content{
     background-color: rgb(248, 245, 245);
+    margin-left: 160px;
 }
 #footer{
     background-color: rgb(169, 177, 177);
